<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/etNameOfPersonFormAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_activity_first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        android:autofillHints="@string/second_activity_first_name" />

    <EditText
        android:id="@+id/etPhoneOfPersonFormAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_activity_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAgeOfPersonFormAct"
        app:layout_constraintVertical_bias="0.08"
        android:autofillHints="@string/second_activity_phone" />

    <EditText
        android:id="@+id/etSurNameOfPersonFormAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_activity_surname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etEmailOfPersonFormAct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameOfPersonFormAct"
        app:layout_constraintVertical_bias="0.428"
        android:autofillHints="@string/second_activity_surname" />

    <Button
        android:id="@+id/btnFormActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitForm"
        android:text="@string/btn_second_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneOfPersonFormAct"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/etAgeOfPersonFormAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_activity_age"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailOfPersonFormAct"
        app:layout_constraintVertical_bias="0.056"
        android:autofillHints="@string/second_activity_age" />

    <EditText
        android:id="@+id/etEmailOfPersonFormAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/second_activity_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameOfPersonFormAct"
        app:layout_constraintVertical_bias="0.173"
        android:autofillHints="@string/second_activity_email" />

</androidx.constraintlayout.widget.ConstraintLayout>